[project]
name = "mcp-gpt-image"
version = "0.1.0"
description = "MCP server for image generation using gpt-image-2"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "openai>=1.75.0",
]

[project.scripts]
mcp-gpt-image = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
